lang/examples/bad/UninitializedVariable.gt
fn main() -> int {
    var x : int;
    var y : int;
    x = y;
    return 0;
}
